--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ PORT=8080
 
 JWT_KEY="my_secret_key"
 
-MY_SQL_URL=""
-MONGO_DB_URL=""
+MY_SQL_URL="admin:my_sql_1@tcp(127.0.0.1:3306)/testdb?charset=utf8mb4&parseTime=True&loc=Local"
+MONGO_DB_URL="mongodb://admin:mongo_db_1@localhost:27017/?authSource=admin"
